tests/fixtures/invalid/pow_int_float_int.py
# Cannot call pow() with Int, Float, Int
x = pow(1, 1.0, 1)
